# Python100Dayspractise

./: .gitignore  README.md  email.py  test.ipynb
PYTHONCODES/: MAL.py  ceasercipher.py  main.py  pypasswordgenerator.py  pyproject.toml  secretauction.py  sendmail.py  twilio_msg.py
PYTHONCODES/14/: README.md  higherorlower.py
PYTHONCODES/15/: README.md  coffee.py  coffee_test.py
PYTHONCODES/16/: README.md  main.py
PYTHONCODES/17/: README.md  main.py  quiz_brain.py
PYTHONCODES/18/: README.md  dots.py  randomwalk.py  spirograph.py
PYTHONCODES/19/: README.md
PYTHONCODES/20/: food.py  main.py  snake.py
PYTHONCODES/20_21/: main.py  scoreboard.py  snake.py
PYTHONCODES/20_21_24/: README.md  food.py  main.py  scoreboard.py  snake.py
PYTHONCODES/22/: README.md  ball.py  main.py  paddle.py  scoreboard.py
PYTHONCODES/23/: README.md  car_manager.py  main.py  player.py  scoreboard.py
PYTHONCODES/24/: main.py  my_file.txt
PYTHONCODES/27/: README.md  main.py
PYTHONCODES/28/: README.md  main.py
PYTHONCODES/29/: data.json  data.txt  main.py  pyproject.toml
PYTHONCODES/29_30/: README.md  main.py
PYTHONCODES/30/: README.md  main.py
PYTHONCODES/31/: README.md  main.py  pyproject.toml
PYTHONCODES/34/: data.py  main.py  quiz_brain.py
PYTHONCODES/35/: rainalert.py
PYTHONCODES/36/: main.py
PYTHONCODES/37/: main.py
PYTHONCODES/38/: main.py
PYTHONCODES/41/: main.html  style.css
PYTHONCODES/44/: index.html
PYTHONCODES/45/: main.py
PYTHONCODES/46/: .cache  main.py  test.py
PYTHONCODES/47/: main.py  test.py
PYTHONCODES/48/: autoclick.py  (+2 more)
(+138 files in other folders)
